--- a/templates/file_result.html
+++ b/templates/file_result.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
-<head><title>File</title></head>
+
+{% block title %}
+
+File
+
+{% endblock %}
+
 {% block content %}
 
 <h1>They don't think it be like it is, but it do.</h1>
