--- a/imageapp/templates/index.html
+++ b/imageapp/templates/index.html
@@ -3,4 +3,11 @@
 {% block content %}
 <a href='upload'>Upload an image</a> |
 <a href='image'>Show most recent image</a>
+
+<p>
+Here is the most recent image:
+</p>
+<p>
+<img width=40% src='image_raw?special=latest'/>
+</p>
 {% endblock %}
