Updated imageapp.py to more recent version

--- a/imageapp/templates/image.html
+++ b/imageapp/templates/image.html
@@ -1,6 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
+<script type="text/javascript">
+
+alert("something happened!");
+
+confirm("may I delete all your files?");
+
+prompt("some question","defaultvalue");
+
+</script>
+
 Here is your image:
 <p>
 <img width=40% src='image_raw?special=latest'/>
