Support for JPEG, TIFF not working on frontend.

--- a/imageapp/templates/index.html
+++ b/imageapp/templates/index.html
@@ -9,7 +9,11 @@
 <a href='image'>Show most recent image</a>
 
 <hr>
+<div id="latestImage"><img width=40% src='image_raw?special=latest'/></div>
+<embed width=200 height=200
+    src='image_raw?special=latest' type='image/tiff'
+    negative=yes>
 
-<img width=40% src='image_raw?special=latest'/>
-
+<script type='text/javascript'>
+</script>
 {% endblock %}
