Fix bug where image was not properly being updated

--- a/imageapp/templates/index.html
+++ b/imageapp/templates/index.html
@@ -9,11 +9,5 @@
 <a href='image'>Show most recent image</a>
 
 <hr>
-<div id="latestImage"><img width=40% src='image_raw?special=latest'/></div>
-<embed width=200 height=200
-    src='image_raw?special=latest' type='image/tiff'
-    negative=yes>
-
-<script type='text/javascript'>
-</script>
+<img width=40% src='image_raw?special=latest'/>
 {% endblock %}
