--- a/imageapp/templates/upload2.html
+++ b/imageapp/templates/upload2.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-Upload a PNG (other version):
+Upload an image (jpg, png, or tif) (other version):
 
 <form enctype='multipart/form-data' action='upload2_receive' method='POST'>
 Filename: <input type='file' name='file'><p>
