Added url handler to access other images

--- a/imageapp/templates/image.html
+++ b/imageapp/templates/image.html
@@ -4,7 +4,7 @@
 
 Here is your image:
 <p>
-<img width=40% src='image_raw?special=latest'/>
+<div id="imageContainer"></div>
 <p>
 <h2>Comments</h2>
 <ul id="comments">
@@ -12,7 +12,23 @@ Here is your image:
 <input type="text" id='add_comment' />
 <button id="add_comment_button">Add Comment</button>
 <script type="text/javascript">
-$.post("get_comments",
+var imageNum = window.location.href.split("?imageNum=")[1]
+
+imageHtml = ''
+
+if($.isNumeric(imageNum)) {
+    imageHtml = "<img width=40% src='image_raw?num=" + imageNum + "' />"
+    console.log(imageHtml)
+} else {
+    // Just show the latest if they're a jerk and used a non numeric value
+    imageHtml = "<img width=40% src='image_raw?special=latest'/>"
+}
+
+
+
+$("#imageContainer").append(imageHtml)
+
+$.post("get_comments?num=" + imageNum,
     function(xml) { 
         console.log(xml)
         $("comment", xml).each( function(id) {
@@ -22,7 +38,11 @@ $.post("get_comments",
     });
 
 $("#add_comment_button").click(function() {
-    $.post("add_comment?comment=" + $("#add_comment").val())
+    $.post("add_comment",
+        {
+            num        :   imageNum,
+            comment    :   $("#add_comment").val(),
+        })
     .success(function(){
         $("#comments").append("<li>" + $("#add_comment").val() + "</li>")
         $("#add_comment").val('')
