--- a/imageapp/templates/index.html
+++ b/imageapp/templates/index.html
@@ -4,7 +4,7 @@
 <a href='upload'>Upload an image</a> |
 <a href='image'>Show most recent image</a>
 <p>
-<h2>Version 2</h2>
+<h2>Version 2 - AJAX</h2>
 <a href='upload2'>Upload an image</a> |
 <a href='image'>Show most recent image</a>
 
