--- a/imageapp/templates/create_account.html
+++ b/imageapp/templates/create_account.html
@@ -8,9 +8,9 @@
 
 <div class="contentText">
 <form id='create' method='post'>
-Username: <input required type='text' id="username" name='username' maxlength='30'><p>
-Password: <input required id='pwd'type='password' name='password' maxlength='30'><p>
-Confirm Password: <input required id='confirm_pwd' type='password' name='password' maxlength='30'><p>
+Username: <input required type='text' id='username' name='username' maxlength='30'><p>
+Password: <input required id='pwd' type='password' name='password' maxlength='30'><p>
+Confirm Password: <input required id='confirm_pwd' type='password' name='confirm_pwd' maxlength='30'><p>
 <input type='submit' value='Submit'>
 </form>
 
@@ -27,13 +27,9 @@ $('#create').on('submit', function () {
     if ($('#pwd').val() == $('#confirm_pwd').val())
     {
     	$.post("create_account_receive",
-        {
-            username   :   $("#username").val(),
-            password   :   $("#pwd").val()
-        }).success(function(){
+        $("#create").serialize()).success(function(){
             window.location = "./";
         })
-        console.log('good')
     } else
     {
 		$('#password_match_failure').show()
