Track owner of images; allow owner to delete their images.

--- a/imageapp/templates/image_list.html
+++ b/imageapp/templates/image_list.html
@@ -8,14 +8,18 @@
 <div id="imageContainer">
 </div>
 <script type="text/javascript">
-    $.post("image_count",
-         function(count) { 
-            count = parseInt(count);
-            for (var i = count; i > 0; i--) {
+    $.post("image_numbers",
+         function(numbers) { 
+            numbers = numbers.replace('[', '')
+            numbers = numbers.replace(']', '')
+            numbers = numbers.split(', ')
+            for (var i = numbers.length - 1; i >= 0; i--) {
+                console.log(parseInt(numbers[i]))
+
                 $("#imageContainer").append("<div style='padding-top:10px'>" + 
-                    "<a href='/image?num=" + i + "'>" +
-                    "<img width='200' src='image_raw?num=" + i + "' /></a></div>");
-            }
+                    "<a href='/image?num=" + numbers[i] + "'>" +
+                    "<img width='200' src='image_raw?num=" + numbers[i] + "' /></a></div>");
+            };
          }
     );
 </script>
