--- a/imageapp/templates/image.html
+++ b/imageapp/templates/image.html
@@ -7,6 +7,9 @@
     <p>
     <div id="imageContainer"></div>
     <p>
+    Owner: <span id="owner"></span>
+    <p>
+    <button id="delete_button" style="display:none">Delete Image</button>
     Score: <span id="score"></span>
     <p>
     <button id='upvote_button'>Upvote</button>
@@ -54,7 +57,17 @@ $.post("get_comments?num=" + imageNum,
             comment = $("comment", xml).get(id)
             $(comments).append("<li>" + ($("text", comment).text()) + "</li>")
         });
-    });
+    });;
+
+$.post("get_owner?num=" + imageNum,
+    function(owner) { 
+        $("#owner").append($.trim(owner))
+        
+        if (username == $.trim(owner))
+        {
+            $("#delete_button").show()
+        }
+    })
 
 $("#add_comment_button").click(function() {
     $.post("add_comment",
@@ -90,6 +103,17 @@ $("#downvote_button").click(function() {
         $("#score").empty()
         $("#score").append(score)
     });
+});
+
+$("#delete_button").click(function() {
+    var result=confirm("Fo' real?");
+
+    if(result==true)
+    {
+        $.post("delete_image?num=" + imageNum).success(function () {
+            window.location.href = "./"
+        });
+    }
 });
 </script>
 {% endblock %}
