--- a/imageapp/templates/index.html
+++ b/imageapp/templates/index.html
@@ -3,16 +3,25 @@
 {% block content %}
 
 <div class="contentText">
-    <a href='upload'>Upload an image</a> |
-    <a href='image'>Show most recent image</a>
-    <p>
-    <h2>Version 2 - AJAX</h2>
-    <a href='upload2'>Upload an image</a> |
-    <a href='image'>Show most recent image</a>
-
+    <div class="uploadLink">
+        <a href='upload'>Upload an image</a>
+        <p>
+        <h2>Version 2 - AJAX</h2>
+        <a href='upload2'>Upload an image</a>
+    </div>
     <p>
     <a href='image_list'>All images</a>
     <hr>
+    Most Recent Image<p>
     <img width=40% src='image_raw'/>
 </div>
+
+<script type="text/javascript">
+var username = $.trim($('#username').text())
+
+if (username == '')
+{
+    $(".uploadLink").hide()
+}
+</script>
 {% endblock %}
